Fix: corrige ruta del logo a kibray-logo.png en dashboard

--- a/core/templates/core/dashboard.html
+++ b/core/templates/core/dashboard.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block content %}
 <div class="header">
-    <img src="{% static 'Kibray.jpg' %}" alt="Kibray Logo" style="height:60px; margin-bottom:10px;">
+    <img src="{% static 'kibray-logo.png' %}" alt="Kibray Logo" style="height:60px; margin-bottom:10px;">
     <h1>Welcome, {{ user.username }}</h1>
 </div>
 
