--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -6,8 +6,23 @@
     <title>Kibray</title>
     {% load static %}
     <link rel="stylesheet" href="{% static 'styles.css' %}">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light mb-3">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Kibray</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ms-auto">
+            <!-- tus enlaces aquí -->
+          </ul>
+        </div>
+      </div>
+    </nav>
+
     {% block content %}
     {% endblock %}
 
