--- a/core/templates/core/dashboard.html
+++ b/core/templates/core/dashboard.html
@@ -49,6 +49,7 @@
         <a href="{% url 'expense_create' %}" class="btn-pdf" style="margin-right:10px;">Add Expense</a>
         <a href="{% url 'income_create' %}" class="btn-pdf" style="margin-right:10px;">Add Income</a>
         <a href="{% url 'timeentry_create' %}" class="btn-pdf" style="margin-right:10px;">Register Hours</a>
+        <a href="{% url 'changeorder_create' %}" class="btn-pdf" style="margin-right:10px;">Add Change Order</a>
         {% if role == "admin" or role == "superuser" or role == "project_manager" %}
             <a href="{% url 'payroll_create' %}" class="btn-pdf" style="margin-right:10px;">Create Payroll</a>
         {% endif %}
