Revisión final, todo en orden antes de migrar y deploy

--- a/core/templates/core/dashboard.html
+++ b/core/templates/core/dashboard.html
@@ -18,8 +18,9 @@
                 <a href="{% url 'income_create' %}" class="btn btn-info">Add Income</a>
                 <a href="{% url 'timeentry_create' %}" class="btn btn-warning">Register Hours</a>
                 <a href="{% url 'changeorder_board' %}" class="btn btn-warning">Change Orders Board</a>
-                <a href="{% url 'invoice_list' %}" class="btn">Ver facturas</a>
-                <a href="{% url 'invoice_create' %}" class="btn">Crear factura</a>
+                <a href="{% url 'changeorder_create' %}" class="btn btn-primary">Crear cambio de orden</a>
+                <a href="{% url 'invoice_list' %}" class="btn btn-info">Ver facturas</a>
+                <a href="{% url 'invoice_create' %}" class="btn btn-success">Crear factura</a>
             </div>
         </div>
     </div>
