--- a/core/templates/core/invoice_detail.html
+++ b/core/templates/core/invoice_detail.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "core/base.html" %}
 {% block content %}
   <h2>Factura {{ invoice.invoice_number }}</h2>
   <p><strong>Proyecto:</strong> {{ invoice.project.name }}</p>
